--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web-devloper-portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="portfolio.css">
 </head>
-<body><header>
+<body><header><nav class="nev-title">
+    <h2>K A <span class="pry">f</span> i</h2>
+    <ul>
+    <li><a href="">Portfolio</a></li>
+    <li><a href="">Blog</a></li>
+    <li><button class="btn">Hire Me</button></li>
+</ul>
+</nav>
 
 </header>
 <main>
