--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
 </head>
-<body><header><nav class="nev-title">
+<body><header class="header"><nav class="nev-title">
     <h2>K A <span class="pry">f</span> i</h2>
     <ul>
     <li><a href="">Portfolio</a></li>
@@ -17,6 +17,18 @@
     <li><button class="btn">Hire Me</button></li>
 </ul>
 </nav>
+<div class="banner">
+<div>
+    <h3 class="banner-greeting">Hi, I am</h3>
+    <h1 class="banner-title">Mary Hardy</h1>
+    <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+    <button class="btn">Dawnlode CV</button>
+    <button class="btn">Contact</button>
+
+
+</div>
+<img class="profile-photo" src="images/hardy.png" alt="">
+</div>
 
 </header>
 <main>
