--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <footer>
     <div class="footer-colum">
         <h3 class="section-title">Lets Connect</h3>
-        <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        <p class="footer-des">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
         <div class="social-links">
             <a href=""><img src="images/icons/facebook.png" alt="">
             </a><a href=""><img src="images/icons/insta.png" alt="">
@@ -154,6 +154,12 @@
     </div>
     <div class="footer-colum">
         <h3 class="section-title">Let’s Message me</h3>
+        <form class="fr" action="">
+            <input type="text" placeholder="Your name">
+            <input type="email" placeholder="Your email">
+            <textarea name="" id="" cols="30" rows="10">Message</textarea>
+            <input class="btn-pri" type="submit" value="submit">
+        </form>
     </div>
 </footer>
     
