--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="portfolio.css"><script src="https://kit.fontawesome.com/1157b88aeb.js" crossorigin="anonymous"></script>
 </head>
 <body><header class="header"><nav class="nev-title">
     <h2>KA<span class="pry">f</span>i</h2>
@@ -22,8 +22,8 @@
     <h3 class="banner-greeting">Hi, I am</h3>
     <h1 class="banner-title">MD KAFI</h1>
     <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-    <button class="btn">Dawnlode CV</button>
-    <button class="btn">Contact</button>
+    <button class="btn"><i class="fa-solid fa-download"></i> Dawnload CV</button>
+    <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
 
 
 </div>
@@ -137,7 +137,7 @@
             </div>
         </div>
         <div class="dawnlode-cv">
-            <button class="btn-pri">Dawnlode-CV</button>
+            <button class="btn-pri"><i class="fa-solid fa-download"></i> Dawnlode-CV</button>
         </div>
     </section>
    
@@ -158,7 +158,7 @@
             <input type="text" placeholder="Your name">
             <input type="email" placeholder="Your email">
             <textarea name="" id="" cols="30" rows="10">Message</textarea>
-            <input class="btn-pri" type="submit" value="submit">
+            <input class="btn" type="submit" value="submit">
         </form>
     </div>
 </footer>
